fixed sorting error on quantity input and added a bit more right padding to select element due to letter overlapping with chevron

--- a/src/components/cellar-overview/cellar-overview.styles.scss
+++ b/src/components/cellar-overview/cellar-overview.styles.scss
@@ -49,7 +49,7 @@
         font-family: "Roboto", sans-serif;
         margin-top: 20px;
         margin-bottom: 15px;
-        padding: 20px;
+        padding: 20px 50px;
         border-radius: 12px;
         font-size: 18px;
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
